--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,7 +6,28 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".RegistrationActivity"
 android:orientation="vertical">
-<EditText
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="name"
+        android:id="@+id/name"/>
+<RadioGroup
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/radioGroup">
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Male"/>
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Female"/>
+</RadioGroup>
+
+    <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="email"
