--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -20,24 +20,27 @@
         app:cardCornerRadius="4dp"
         android:elevation="2dp"
         android:id="@+id/cardView">
-<FrameLayout
-    android:layout_width="250dp"
-    android:layout_height="170dp"
-    android:layout_gravity="center">
+<LinearLayout
+    android:layout_width="300dp"
+    android:layout_height="350dp"
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/image"/>
+            android:layout_height="300dp"
+            android:id="@+id/image"
+            android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/name"
-            android:textSize="40sp"
+            android:textSize="30sp"
+            android:paddingLeft="20sp"
             android:textColor="@android:color/black"
-            android:gravity="center"
+            android:gravity="center|left"
             tools:text="name"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-</FrameLayout>
+</LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
