--- a/app/src/main/res/layout/activity_matches.xml
+++ b/app/src/main/res/layout/activity_matches.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
 
         <Button
             android:layout_width="wrap_content"
