--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SignOut"
             android:id="@+id/logoutUser"
-            android:onClick="logoutUser"/>
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Matches"
+            android:onClick="logoutUser"
+            android:text="SignOut" />
+
+        <Button
             android:id="@+id/matches"
-            android:onClick="goToMatches"/>
-        <Button
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:onClick="goToMatches"
+            android:text="Matches" />
+
+        <Button
             android:id="@+id/settins"
-            android:onClick="goToSettings"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="goToSettings"
+            android:text="Settings" />
+
+    </LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="top"
+    android:layout_weight="1">
+    <com.lorentzos.flingswipe.SwipeFlingAdapterView
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        app:rotation_degrees="15.5"
+        tools:context=".MyActivity" />
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="20sp"
+            android:layout_height="75sp"
+            android:layout_weight="1"
+            android:text="DISLIKE" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="20sp"
+            android:layout_height="75sp"
+            android:layout_weight="1"
+            android:text="LIKE"
+            />
     </LinearLayout>
 
 
-    <com.lorentzos.flingswipe.SwipeFlingAdapterView
-        android:id="@+id/frame"
-        android:background="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:rotation_degrees="15.5"
-        tools:context=".MyActivity" />
 </LinearLayout>
