--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,44 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingLeft="40sp"
-    android:paddingRight="40sp"
-    android:paddingTop="20sp"
-    android:paddingBottom="20sp"
+    android:layout_gravity="top"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp"
+    android:paddingTop="10sp"
+    android:paddingBottom="10sp"
     android:outlineProvider="bounds"
     android:clipToPadding="false">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         app:cardCornerRadius="4dp"
         android:elevation="2dp"
         android:id="@+id/cardView">
+
 <LinearLayout
-    android:layout_width="300dp"
-    android:layout_height="350dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_weight="1"
             android:id="@+id/image"
             android:scaleType="centerCrop"/>
         <TextView
+
             android:id="@+id/name"
             android:textSize="30sp"
             android:paddingLeft="20sp"
             android:textColor="@android:color/black"
-            android:gravity="center|left"
+            android:gravity="center_vertical|left"
             tools:text="name"
+            android:layout_weight="0.075"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tags"
+        android:textSize="30sp"
+        android:paddingLeft="20sp"
+        android:paddingBottom="15sp"
+        android:textColor="@android:color/black"
+        android:gravity="center_vertical"
+        tools:text="tags"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
     </androidx.cardview.widget.CardView>
 
