--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,14 +57,14 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/dislikeButton"
             android:layout_width="20sp"
             android:layout_height="75sp"
             android:layout_weight="1"
             android:text="DISLIKE" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/likeButton"
             android:layout_width="20sp"
             android:layout_height="75sp"
             android:layout_weight="1"
