--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,13 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/logoutUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="logoutUser"
-            android:text="SignOut" />
-
-        <Button
-            android:id="@+id/matches"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="goToMatches"
-            android:text="Matches" />
 
         <Button
             android:id="@+id/settins"
@@ -34,13 +23,32 @@
             android:onClick="goToSettings"
             android:text="Settings" />
 
+        <Button
+            android:id="@+id/matches"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:onClick="goToMatches"
+            android:text="Matches" />
+        <Button
+            android:id="@+id/profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="goToProfile"
+            android:text="Profle" />
+
     </LinearLayout>
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="top"
-    android:layout_weight="1">
+    android:layout_weight="1"
+    android:orientation="horizontal">
+
+
+
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/frame"
         android:layout_width="match_parent"
@@ -48,7 +56,10 @@
         android:layout_gravity="center"
         android:background="@android:color/transparent"
         app:rotation_degrees="15.5"
-        tools:context=".MyActivity" />
+        tools:context=".MyActivity"
+        />
+
+
 </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,3 +85,4 @@
 
 
 </LinearLayout>
+
