--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,39 +5,58 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".RegistrationActivity"
-android:orientation="vertical">
+android:orientation="vertical"
+    android:padding="50sp">
 
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="name"
+        android:inputType="textPersonName"
+        android:hint="Name"
         android:id="@+id/name"/>
+
 <RadioGroup
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/radioGroup">
+    android:id="@+id/radioGroup"
+    android:orientation="horizontal"
+    android:layout_marginTop="10sp"
+    android:layout_marginBottom="10sp">
     <RadioButton
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="Male"/>
     <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+
         android:text="Female"/>
 </RadioGroup>
+
 
     <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="email"
+    android:inputType="text"
+    android:hint="Email"
     android:id="@+id/email"/>
 
 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="password"
-    android:id="@+id/password"/>
+    android:hint="Password"
+    android:id="@+id/password"
+    android:inputType="textPassword"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Repeat password"
+        android:id="@+id/repeatpassword"
+        android:inputType="textPassword"/>
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
