--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,32 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Chat.ChatActivity">
+    android:layout_height="wrap_content"
+    tools:context=".Chat.ChatActivity"
+    android:orientation="vertical">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_above="@id/sendLayout"
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimaryDark">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="50sp"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_launcher" />
+
+
+    </androidx.appcompat.widget.Toolbar>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="100">
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/recyclerView"
-            android:scrollbars="vertical">
+            android:scrollbars="vertical"
+            app:stackFromEnd="true">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </androidx.core.widget.NestedScrollView>
+
+
+</RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/sendLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:layout_weight="1">
         <EditText
             android:layout_weight="0.8"
             android:width="0dp"
@@ -48,4 +70,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
