--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
 
     </LinearLayout>
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="top"
@@ -48,6 +48,13 @@
     android:orientation="horizontal">
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Loading users"
+        android:gravity="center"
+        android:id="@+id/noMore"
+        android:textSize="25sp"/>
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/frame"
@@ -57,10 +64,10 @@
         android:background="@android:color/transparent"
         app:rotation_degrees="15.5"
         tools:context=".MyActivity"
-        />
+        android:layout_weight="1"/>
 
 
-</LinearLayout>
+</RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
