Created multiple imageView in profileActivity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,12 +8,38 @@
     android:orientation="vertical"
     android:padding="20sp">
 
+
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="300sp"
+        android:id="@+id/viewPager"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="10sp">
     <ImageView
-        android:layout_width="100sp"
-        android:layout_height="100sp"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
         android:id="@+id/profileImage"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginBottom="20sp"/>
+        android:layout_marginBottom="20sp"
+        android:layout_weight="1"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:id="@+id/addImage"
+        android:src="@drawable/plus_orange"
+        android:layout_marginBottom="20sp"
+        android:layout_weight="1"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:id="@+id/delImage"
+        android:src="@drawable/delete"
+        android:layout_marginBottom="20sp"
+        android:layout_weight="1"/>
+</LinearLayout>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,6 +69,12 @@
         android:maxLines="5"
         />
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="vertical"
+    android:layout_weight="1"
+    android:gravity="bottom|center">
 
     <Button
         android:layout_width="match_parent"
@@ -54,7 +86,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/back"
         android:text="Back"/>
-
+</LinearLayout>
 
 
 </LinearLayout>
