--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,19 +12,20 @@
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="300sp"
-        android:id="@+id/viewPager"/>
+        android:id="@+id/viewPager"
+        android:background="@mipmap/ic_launcher">
+    </androidx.viewpager.widget.ViewPager>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10sp">
-    <ImageView
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:id="@+id/profileImage"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginBottom="20sp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Set as default"
+        android:id="@+id/setDefaultButton"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="50sp"
