--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,29 @@
         android:layout_height="wrap_content"
         android:text="LOGIN"
         android:id="@+id/login"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"/>
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/placeForGoogleBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
     <TextView
-        android:paddingTop="20sp"
+        android:paddingTop="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="First time? Click register now!"/>
@@ -36,5 +56,6 @@
         android:layout_height="wrap_content"
         android:text="REGISTER"
         android:id="@+id/register"/>
+==
 
 </LinearLayout>
