--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity"
     android:orientation="vertical"
-    android:padding="50sp">
+    android:padding="50sp"
+    android:id="@+id/mainLayout">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
