--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="300sp"
+        android:layout_height="400sp"
         android:id="@+id/viewPager"
         android:background="@mipmap/ic_launcher">
     </androidx.viewpager.widget.ViewPager>
@@ -60,7 +60,7 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="110sp"
+        android:layout_height="match_parent"
         android:id="@+id/description"
         android:background="#50CBCBCB"
         android:hint="Description"
@@ -69,7 +69,7 @@
         android:maxLength="200"
         android:maxLines="5"
         />
-
+<!---
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/back"
         android:text="Back"/>
-</LinearLayout>
+</LinearLayout>-->
 
 
 </LinearLayout>
