--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,8 +13,13 @@
         android:id="@+id/logoutUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="logoutUser"
         android:text="SignOut"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/deleteUser"
+        android:text="Delete account"
         />
 
 </LinearLayout>
