--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,6 +47,7 @@
         android:id="@+id/name"
         android:background="#50CBCBCB"
         android:hint="Name"
+        android:maxLength="15"
         android:inputType="textPersonName"
         android:layout_marginBottom="20sp"/>
     <EditText
