--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -4,14 +4,26 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:padding="20sp"
-        android:id="@+id/container">
+        android:padding="5sp"
+        android:id="@+id/container"
+        android:gravity="right"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:radius="25sp">
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/chatImage"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:paddingBottom="20sp"
-            android:layout_width="match_parent"
+            android:paddingTop="5sp"
+            android:paddingBottom="5sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Text"
             android:id="@+id/message"/>
