Fixed blank image bug in chatActivity and made circle boarder in matchesActivity

--- a/app/src/main/res/drawable/my_chat.xml
+++ b/app/src/main/res/drawable/my_chat.xml
@@ -7,6 +7,9 @@
         android:angle="90"/>
 
     <corners
-        android:radius="15sp"/>
+        android:bottomLeftRadius="20sp"
+        android:topLeftRadius="20sp"
+        android:topRightRadius="20sp"/>
+
 
 </shape>
