--- a/app/src/main/res/drawable/other_chat.xml
+++ b/app/src/main/res/drawable/other_chat.xml
@@ -7,6 +7,8 @@
         android:angle="90"/>
 
     <corners
-        android:radius="15sp"/>
+        android:bottomRightRadius="20sp"
+        android:topLeftRadius="20sp"
+        android:topRightRadius="20sp"/>
 
 </shape>
