--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -5,11 +5,26 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="20sp">
+
+    <!--
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="55sp"
         android:layout_height="55sp"
         android:src="@mipmap/ic_launcher"
-        android:id="@+id/MatchImage"/>
+        android:id="@+id/MatchImage"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:civ_border_width="5dp"
+        app:civ_border_color="#000000"
+       />-->
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:layout_width="55sp"
+        android:layout_height="55sp"
+        android:src="@mipmap/ic_launcher"
+        android:id="@+id/MatchImage"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+        app:civ_border_width="3dp" />
+
     <LinearLayout
     android:paddingLeft="10sp"
     android:layout_width="wrap_content"
