Created application logo, fillInfoActivity after first login from extertnal providers

--- a/app/src/main/res/drawable/my_chat.xml
+++ b/app/src/main/res/drawable/my_chat.xml
@@ -9,7 +9,8 @@
     <corners
         android:bottomLeftRadius="20sp"
         android:topLeftRadius="20sp"
-        android:topRightRadius="20sp"/>
+        android:topRightRadius="20sp"
+        android:bottomRightRadius="5sp"/>
 
 
 </shape>
