--- a/app/src/main/res/drawable/other_chat.xml
+++ b/app/src/main/res/drawable/other_chat.xml
@@ -9,6 +9,7 @@
     <corners
         android:bottomRightRadius="20sp"
         android:topLeftRadius="20sp"
-        android:topRightRadius="20sp"/>
+        android:topRightRadius="20sp"
+        android:bottomLeftRadius="5sp"/>
 
 </shape>
