--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,25 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity"
-    android:orientation="vertical"
-    android:padding="20sp">
+    android:orientation="vertical">
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:layout_weight="20"
+        android:paddingBottom="5sp"
+        android:orientation="horizontal">
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="400sp"
+        android:layout_height="match_parent"
         android:id="@+id/viewPager"
-        android:background="@mipmap/ic_launcher">
+        android:background="@drawable/profile_default">
     </androidx.viewpager.widget.ViewPager>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_marginTop="10sp">
+    android:gravity="bottom"
+    android:layout_marginBottom="10sp"
+    >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:id="@+id/delImage"
+        android:src="@drawable/delete"
+        android:layout_weight="1"/>
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_weight="1"
+        android:textSize="12sp"
         android:text="Set as default"
         android:id="@+id/setDefaultButton"/>
     <ImageView
@@ -31,16 +45,17 @@
         android:layout_height="50sp"
         android:id="@+id/addImage"
         android:src="@drawable/plus_orange"
-        android:layout_marginBottom="20sp"
-        android:layout_weight="1"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:id="@+id/delImage"
-        android:src="@drawable/delete"
-        android:layout_marginBottom="20sp"
         android:layout_weight="1"/>
 </LinearLayout>
+     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="2"
+        android:padding="10sp">
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,34 +76,15 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200sp"
         android:id="@+id/description"
         android:background="#50CBCBCB"
         android:hint="Description"
         android:gravity="top"
         android:layout_marginBottom="20sp"
         android:maxLength="200"
-        android:maxLines="5"
+        android:maxLines="10"
         />
-<!---
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:orientation="vertical"
-    android:layout_weight="1"
-    android:gravity="bottom|center">
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/confirm"
-        android:text="Confirm"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/back"
-        android:text="Back"/>
-</LinearLayout>-->
-
+    </LinearLayout>
 
 </LinearLayout>
