fixed profile image and removed google services and strings

--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -19,7 +19,7 @@
     <com.mikhaellopez.circularimageview.CircularImageView
         android:layout_width="55sp"
         android:layout_height="55sp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/picture_default"
         android:id="@+id/MatchImage"
         xmlns:app="http://schemas.android.com/apk/res-auto"
 
