--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,13 +8,19 @@ tools:context=".RegistrationActivity"
 android:orientation="vertical"
     android:padding="50sp">
 
-
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Email"
+        android:id="@+id/email"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Name"
         android:id="@+id/name"/>
+
 
 <RadioGroup
     android:layout_width="match_parent"
@@ -35,14 +41,15 @@ android:orientation="vertical"
 
         android:text="Female"/>
 </RadioGroup>
-
-
     <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:inputType="text"
-    android:hint="Email"
-    android:id="@+id/email"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="DD/MM/YYYY"
+        android:ems="10"
+        android:inputType="date"
+        android:id="@+id/date"/>
+
+
 
 <EditText
     android:layout_width="match_parent"
