--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@drawable/chat_top_bar">
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -36,7 +36,7 @@
             android:layout_marginLeft="5sp"
             android:layout_marginTop="14sp"
             android:text="Name"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="25sp"
             android:layout_toEndOf="@+id/profileImage"
             android:layout_toRightOf="@+id/profileImage"   />
@@ -66,6 +66,10 @@
            android:layout_toRightOf="@+id/backButton"-->
 
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
     </androidx.appcompat.widget.Toolbar>
 
     <RelativeLayout
@@ -90,7 +94,7 @@
     <LinearLayout
         android:id="@+id/sendLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50sp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_weight="1">
@@ -105,9 +109,11 @@
         <Button
             android:layout_weight="0.2"
             android:width="0dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginRight="4sp"
+            android:layout_width="100sp"
+            android:layout_height="30sp"
             android:text="Send"
+            android:background = "@drawable/rounded_button"
             android:id="@+id/send"/>
 
     </LinearLayout>
