--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:text="lastMessage"
         android:layout_gravity="center"
+        android:maxLines="1"
         android:id="@+id/lastMessage"/>
 
     </LinearLayout>
