--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,38 +12,43 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="50sp"
+        android:orientation="horizontal"
+        android:paddingTop="10sp">
 
-        <Button
+        <ImageView
             android:id="@+id/settins"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="goToSettings"
-            android:text="Settings" />
+            android:text="Settings"
+            android:src="@drawable/settings"/>
 
-        <Button
+        <ImageView
             android:id="@+id/tags"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:onClick="goToTags"
-            android:text="Tags" />
-        <Button
+            android:text="Tags"
+            android:src="@drawable/tags"/>
+        <ImageView
             android:id="@+id/matches"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:onClick="goToMatches"
-            android:text="Matches" />
-        <Button
+            android:text="Matches"
+            android:src="@drawable/matches"/>
+        <ImageView
             android:id="@+id/profile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="goToProfile"
-            android:text="Profle" />
+            android:text="Profle"
+            android:src="@drawable/profile"/>
 
     </LinearLayout>
 
@@ -92,21 +97,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="5sp">
 
-        <Button
+        <ImageView
             android:id="@+id/dislikeButton"
             android:layout_width="20sp"
             android:layout_height="75sp"
             android:layout_weight="1"
-            android:text="DISLIKE" />
+            android:text="DISLIKE"
+            android:src="@drawable/dislike"
+            android:paddingLeft="50sp"/>
 
-        <Button
+        <ImageView
             android:id="@+id/likeButton"
             android:layout_width="20sp"
             android:layout_height="75sp"
             android:layout_weight="1"
             android:text="LIKE"
+            android:src="@drawable/like"
+            android:paddingRight="50sp"
             />
     </LinearLayout>
 
