--- a/app/src/main/res/layout/activity_matches.xml
+++ b/app/src/main/res/layout/activity_matches.xml
@@ -7,22 +7,28 @@
     tools:context=".Matches.MatchesActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="100sp"
         android:layout_height="match_parent"
         android:orientation="vertical"
 
         android:padding="5sp">
 
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:padding="4sp"
             android:text="LOC"
-            android:id="@+id/locationButton"/>
+            android:id="@+id/locationButton"
+            android:src="@drawable/location"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="all"
+            android:background = "@drawable/rounded_button"
+            android:layout_margin="5sp"
             android:id="@+id/allMatches"/>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -37,17 +43,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#50CBCBCB">
+>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="#all "
-        android:textSize="20sp"
-        android:padding="10sp"
+        android:textSize="25sp"
+        android:paddingTop="10sp"
         android:id="@+id/sortByText"
 
         />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Messages:"
+            android:textSize="15sp"
+            android:paddingTop="5sp"/>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
