--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:text="You have new match!"
         android:textSize="30sp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_weight="3"
         />
     <de.hdodenhof.circleimageview.CircleImageView
